--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,17 +4,17 @@
     <link href="/Content/CSS/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/Content/CSS/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <title>PROJECT TITLE</title>
+    <title>Band Tracker</title>
   </head>
   <body>
     <div class="container">
       <div class="page-header">
-        <h1><span id="heading-color1">Project Title again</span><br><small>More info</small></h1>
+        <h1><span id="heading-color1">Band Tracker</span><br><small></small></h1>
       </div>
       @* <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <ul class="nav nav-pills">
+            <!-- <ul class="nav nav-pills">
               <li class="nav-item">
                 <a class="nav-link active" href="/">Home</a>
               </li>
@@ -27,7 +27,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/FIRST THING AGAIN/all">View All X</a>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </nav> *@
@@ -38,7 +38,7 @@
 
     <footer class="page-footer">
         <div>
-          <p>By X and Y</p>
+          <p><a href = "/">Return Home</a></p>
         </div>
     </footer>
 
