--- a/Views/bands.cshtml
+++ b/Views/bands.cshtml
@@ -4,7 +4,7 @@
   {
     @foreach (var band in Model)
     {
-    <li><a href="/bands/@band.GetId()">@band.GetName()</a></li>
+    <li><a href="/band/@band.GetId()">@band.GetName()</a></li>
     }
   }
 </ul>
