--- a/Views/venue.cshtml
+++ b/Views/venue.cshtml
@@ -4,17 +4,29 @@
 
 <h2>For this venue, here are some bands:</h2>
 
-@if (@Model["bands"].Count == 0)
+@if (@Model["venueBands"].Count == 0)
 {
   <p>No bands have been added to this venue yet</p>
 }
 else
 {
   <ol>
-    @foreach (var band in @Model["bands"])
+    @foreach (var band in @Model["venueBands"])
     {
       <li>@band.GetName()</li>
     }
   </ol>
 }
-<p><a href="/bands/new">Add a new band</a></p>
+
+<p><h4><a href="/bands/new">Add a new band to this venue</a></h4></p>
+  <form action = "/venue/add_band" method="post">
+    <input id="venue-id" name="venue-id" type="hidden" value="@Model["venue"].GetId()">
+    <label for="band-id">Band for this venue:</label>
+    <select id="band-id" name="band-id" type="text">
+      @foreach (var band in @Model["allBands"])
+      {
+        <option value="@band.GetId()">@band.GetName()</option>
+      }
+    </select>
+    <button type="submit">Add this band</button>
+  </form>
